Remove unpatented hinter (2/3).
* devel/ftoption.h (TT_CONFIG_OPTION_UNPATENTED_HINTING): Remove.

Signed-off-by: mydongistiny <jaysonedson@gmail.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2016-01-28  Nikolaus Waxweiler  <madigens@gmail.com>
 
+	Remove unpatented hinter (2/3).
+
+	* devel/ftoption.h (TT_CONFIG_OPTION_UNPATENTED_HINTING): Remove.
+
+2016-01-28  Nikolaus Waxweiler  <madigens@gmail.com>
+
 	Remove unpatented hinter (1/3).
 
 	* src/truetype/ttinterp.c [TT_CONFIG_OPTION_UNPATENTED_HINTING]:
